# Algo_Trading

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
prompts/: youtube_prompts.txt
src/intraday_direction_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/intraday_engine/: __init__.py  __main__.py  dashboard.py  main.py  maintenance.py  position_monitor.py
src/intraday_engine/analysis/: __init__.py  day_bias.py  eod_signal_analysis.py  market_condition.py  momentum.py  rsi.py  scoring.py  sideways.py  summary_builder.py  support_resistance.py  trade_plan.py
src/intraday_engine/api/: __init__.py  dashboard.py
src/intraday_engine/cli/: main.py
src/intraday_engine/core/: __init__.py  config.py  models.py  tunables.py  underlyings.py
src/intraday_engine/engine/: __init__.py  direction_engine.py  scheduler.py  stock_cycle_runner.py  stock_signal_engine.py
src/intraday_engine/eod/: __init__.py  eod_fetcher.py
src/intraday_engine/features/: feature_engineering.py
src/intraday_engine/fetch/: __init__.py  instrument_resolver.py  market_data.py  stock_market_data.py  zerodha_client.py
src/intraday_engine/gamma/: __init__.py  expiry_utils.py  gamma_blast.py  huge_move_predictor.py  option_chain_fetcher.py
src/intraday_engine/orb/: __init__.py  orb_scanner.py
src/intraday_engine/reference/: ind_nifty500list.csv
src/intraday_engine/research/: __init__.py  intraday_move_windows.py  nifty500_accumulation_scanner.py  tomorrow_watchlist_scanner.py
src/intraday_engine/scanner/: __init__.py  scanner_metrics.py  (+4 more)
(+13 files in other folders)
